[metadata]
name = noonclient-jkporter
version = 0.0.3
author = Jonathan Porter
author_email = author@example.com
description = A Python client for Noon Lighting System.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jkporter/noonclient
project_urls =
    Bug Tracker = https://github.com/jkporter/noonclient/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9.7

[options.packages.find]
where = src